# grover-landscaping

./: .dockerignore  .env.example  .gitignore  .tool-versions  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  justfile  render.yaml
backend/: Cargo.toml  README.md
backend/migrations/: 0001_create_jobs.sql  0002_add_customer_accounts.sql  0003_add_day_plan_tables.sql  0004_add_day_plan_indexes.sql  0005_add_route_planning_seed_job.sql  0006_add_completion_reports.sql  202606280001_property_portfolios.sql  202606280002_property_crew_assignments.sql  202606280003_property_portfolio_boundaries.sql  202606290001_access_audit_events.sql  202606290002_day_plan_amendment_requests.sql  202606290003_amendment_manager_review.sql  202606290004_project_bids.sql  202606290005_project_bid_approval.sql  202606290006_bid_notification_outbox.sql  202606290007_notification_delivery_receipts.sql  202606290008_project_bid_conversion.sql  202607030001_completion_reports.sql  202607030002_completion_report_photo_evidence.sql  202607030003_completion_report_service_steps.sql  202607030004_completion_report_add_ons.sql  202607030005_completion_report_status_history.sql  202607030006_completion_report_share_tokens.sql  202607030008_completion_report_review_notes.sql  202607030009_completion_report_delivery_attempts.sql  202607030011_completion_report_generation_runs.sql  202607030012_completion_report_quality_checks.sql  202607030013_completion_report_quality_check_runs.sql  202607030014_completion_report_summary_versions.sql  202607080001_job_completion_report_lifecycle.sql  (+58 more)
(+390 files in other folders)
